--- a/css/site.css
+++ b/css/site.css
@@ -1,11 +1,37 @@
 :root{
     --primary-color: #1d5888;
-    --secondary-color: #ff993b;
+    --secondary-color: #ff993b; /* Coder Foundry Orange*/
     --dark-color: #292929;
     --white-color: #e7e7e7;
 
 }
+body{
+    color:var(--dark-color);
+}
 
+nav{
+    background-color: var(--dark-color);
+}
+
+footer{
+    background-color: var(--dark-color);
+    padding: 1rem;
+}
+
+footer .social>a{
+    color: var(--white-color);
+    opacity: 0.75;
+
+}
+
+footer .social>a:hover{
+    opacity: 0.90;
+    color:var(--secondary-color)
+    
+}
+h1,h2,h3,h4,h5,h6{
+    color: var(--primary-color);
+}
 main>.container {
     padding: 60px 15px 0;
     margin-bottom: 5rem;
