--- a/css/site.css
+++ b/css/site.css
@@ -27,7 +27,7 @@ footer .social>a{
 footer .social>a:hover{
     opacity: 0.90;
     color:var(--secondary-color)
-    
+
 }
 h1,h2,h3,h4,h5,h6{
     color: var(--primary-color);
@@ -43,3 +43,30 @@ main>.container {
     width: 100%;
 }
 
+.bsicon{
+    color: purple;
+
+}
+
+.jsicon{
+    color: rgba(255, 230, 0, 0.884)
+}
+
+.html5icon{
+    color: orangered;
+}
+
+.cssicon{
+    color: rgb(11, 82, 214);
+}
+
+.checklist >li i{
+    color: var(--secondary-color);
+}
+
+code[class*="language-"],
+pre[class*="language-"] {
+white-space: pre-wrap;
+word-break: break-all;
+word-wrap: break-word;
+}
